# RaspBioloid-Pico-msgs

./: CMakeLists.txt  package.xml
msg/: batt_status.msg  config.msg  voltage_lvls.msg
srv/: MopiInfo.srv  PicoInfo.srv  PicoLowLevel.srv
